--- a/style.css
+++ b/style.css
@@ -1,67 +1,105 @@
 @font-face {
-    font-family: 'Gilroy';
-    src: url(assets/Gilroy-Regular.ttf);
+  font-family: "Gilroy";
+  src: url(assets/Gilroy-Regular.ttf);
 }
 @font-face {
-    font-family: 'GilroyB';
-    src: url(assets/Gilroy-Bold.ttf);
+  font-family: "GilroyB";
+  src: url(assets/Gilroy-Bold.ttf);
 }
 @font-face {
-    font-family: 'GilroyT';
-    src: url(assets/Gilroy-Thin.ttf);
+  font-family: "GilroyT";
+  src: url(assets/Gilroy-Thin.ttf);
+}
+@font-face {
+  font-family: "MaziusEi";
+  src: url(assets/Mazius-Extraitalic.otf);
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Gilroy;
 }
 
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 #main {
-    position: relative;
-    width: 100%;
-    height: 100%;
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 #loader {
-    width: 100%;
-    height: 100%;
-    background-color: #151515;
-    color: #fff;
+  width: 100%;
+  height: 100%;
+  background-color: #151515;
+  color: #fff;
 }
 
 #loader #topheading {
-
-    align-items: center;
-    font-family: Gilroy;
-    position: absolute;
-    top: 5%;
-    left: 50%;
-    transform: translate(-50%, 0);
+  align-items: center;
+  font-family: Gilroy;
+  position: absolute;
+  top: 5%;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
-#topheading h5{
-    text-transform: uppercase;
-    font-size: 10px;
-    font-weight: 300;
+#topheading h5 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: 300;
+}
+
+#loader h1 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 4vw;
+  font-weight: 550;
+}
+
+.reveal .parent {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  overflow-y: hidden;
+}
+
+.reveal .parent .child {
+  display: block;
+}
+
+.parent .child span {
+  display: inline-block;
+}
+
+span:nth-child(2) {
+  color: #14cf93;
+  font-family: MaziusEi;
 }
 
 #green {
-    height: 0px;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    background-color: #14cf93;
+  height: 0px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background-color: #14cf93;
 }
 
 #white {
-    width: 100%;
-    height: 0;
-    position: absolute;
-    bottom: 0;
-    background-color: #fcfaf8;
+  width: 100%;
+  height: 0;
+  position: absolute;
+  bottom: 0;
+  background-color: #fcfaf8;
 }
